# CN_lab7_socket

./: CMakeLists.txt  client.cpp  defs.h  main.cpp  server.cpp
